--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,9 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  font-family: IBM Plex Mono, sans-serif;
+  font-weight: 400px;
+  background-color: #000028;
 }
 
 h1,
