--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,9 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --accent-color: #ff0070;
+  --text-color: #F1B2CE;
+  --bg-color: #000028;
+  --main-font:'IBM Plex mono';
+}
