--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
   max-inline-size: 1440px;
   margin: 0 auto;
   font-family: IBM Plex Mono, sans-serif;
-  font-weight: 400px;
+  font-weight: 400;
   background-color: #000028;
 }
 
