--- a/styles/style.css
+++ b/styles/style.css
@@ -1,86 +1,75 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  margin: 0;
-  color: var(--text-color, #F1B2CE);
-  font-family: var(--main-font, sans-serif);
-  background-image: url(../images/cover-image-dark.png);
+  font-family: "IBM Plex mono", sans-serif;
+  background-color: var( --bg-color);
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
   background-attachment: fixed;
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-}
-
-:root {
-  --brand-color: #FF0070;
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
 .header {
-  height: 668px;
-  display: flex;
-}
-
-.header_content_section {
-  position: absolute;
-}
-
-.header__logo {
-  display: flex;
-  right: 28px;
-  justify-content: right;
-  min-width: 50px;
-  color: #FF0070;
-  font-size: 18px;
-  text-transform: uppercase;
-  position: absolute;
-  margin-block-end: 20px;
-}
-
-/* точка после REС, нужно расскоментировать и добавить */
-/* .decorated-zone::before {
-  position: absolute;
-  content: '';
-  width: 9px;
-  height: 9px;
-  top: 8px;
-  right: -19px;
-  display: block;
-  background-color: #FF0070;
-  border-radius: 50%;
-} */
-
-.decorated-zone::before {
-  content: '';
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 25px;
-  height: 25px;
-  border-right: solid 1px #FF0070;
-  border-top: solid 1px #FF0070;
-}
-
-.decorated-zone::after {
-  content: '';
-  position: absolute;
-  left: 10px;
-  bottom: 10px;
-  width: 25px;
-  height: 25px;
-  border-left: solid 1px #FF0070;
-  border-bottom: solid 1px #FF0070;
-}
-
-.title {
-  background-color: #FF0070;
-  color: #000028;
-  font-size: 18px;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  min-height: 668px;
+  align-items: center;
+  position: relative;
+  padding: 10px;
 }
 
 .header__theme-menu {
+  justify-self: end;
+}
+
+.header__decor-item {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
   position: absolute;
-  display: block;
+  top: 10px;
+  right: 20px;
+  color: var(--accent-color);
   text-align: center;
-  top: 75px;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: var(--decor-line-height);
+}
+
+.header__decor-item::after {
+  content: "";
+  width: 9px;
+  height: 9px;
+  background-color: var(--accent-color);
+  align-self: center;
+  justify-content: end;
+/*  margin-inline-start: 10px;
+  margin-inline-end: 5px;*/
+  border-radius: 50%;
+  box-shadow: 0 0 4px 3px var(--accent-color);
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  display: flex;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::before{
+  border-top: solid 1px var(--main-color);
+  border-right: solid 1px var(--main-color);
+  top: 10px;
   right: 10px;
+}
+.decorated-zone::after {
+  border-left: solid 1px var(--main-color);
+  border-bottom: solid 1px var(--main-color);
+  left: 10px;
+  bottom: 10px;
 }
 
 .header__theme-menu-list {
@@ -93,20 +82,42 @@
   background: transparent;
   font-style: normal;
   font-size: 18px;
-  line-height: 18px;
   text-transform: lowercase;
-  color: #FF0070;
-  border: 0;
+  color: var(--main-color);
   height: 26px;
   width: 70px;
-  display: flex;
-  justify-content: center;
+  border: none;
 }
 
 .header__theme-menu-button_active {
-  color: #FF0070;
-  border: 1px solid #FF0070;
+  border: 1px solid (--main-color);
   pointer-events: none;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.cover__title {
+  font-size: var(--title-font-size);
+  text-transform: lowercase;
+  color: var(--title-color);
+  line-height: 0.825em;
+  text-shadow: 4px 4px var(--accent-color);
+  align-self: center;
+}
+
+.header__description {
+  align-self: center;
+  justify-self: end;
+}
+
+.title-decor {
+  font-size: 18px;
+  line-height: 1.3em;
+  background-color: var(--accent-color);
+  color: var(--block-title-color);
+  font-weight: bold;
 }
 
 .cover {
@@ -117,107 +128,89 @@
   background-size: cover;
 }
 
-.decorated-zone {
-  position: relative;
-  margin: 10px;
-  border: solid 10px red;
-}
-
-.cover__title {
-  width: 100%;
-  font-weight: 700;
-  font-size: 116px;
-  line-height: 95.7px;
-  color: #DB00FF;
-  margin: auto;
-  filter: drop-shadow(5px 5px var(--brand-color));
-  font-size: (7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-}
-
 .content-section {
-  display: flex;
-  box-sizing: border-box;
-  min-width: 355px;
-  min-height: 117px;
-  margin-block-start:10px;
+  display: grid;
+  gap: 20px;
+  padding: 40px 10px 10px;
 }
 
 .intro__title {
-  display: flex;
   font-size: 18px;
-  color: #FF0070;
-  font-weight:700;
-  margin-block-start: 40px;
+  color: var(--main-color);
+  font-weight:bold;
+  line-height: 1.3em;
 }
 
+.title_two {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 .content-section__introduction {
   font-size: 18px;
-  color: #000028;
-  background-color: #FF0070;
-  font-weight:700;
-  margin-block-start: 20px;
+  line-height: 1.3em;
+  background-color: var(--accent-color);
+  color: var(--block-title-color);
 }
 
 .card__text {
-  color: #F1B2CE;
   font-size: 18px;
-  margin-block-start: 10px;
+  color: var(--text-color);
+  line-height: 1.3em;
+}
+
+.card-one .intro__title {
+  margin-block-end: 10px;
 }
 
 .color-span {
-  font-size: 18px;
-  color: #000028;
-  background-color: #FF0070;
-  margin-block-start: 20px;
-  margin-block-end: 20px;
+  color: var(--subsection-text-color);
+  background-color: var(--accent-color);
+  font-size: var(--main-font-size);
+  font-weight: 400;
+  margin-top: 20px;
 }
 
-.container {
-  display: grid;
-  gap: 10px;
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-.container img {
+.link:hover {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--text-color);
+}
+
+.card__picture img{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-top: 10px;
 }
 
-/* .title_three {
+.footer {
   display: flex;
-  min-width: 355px;
-  min-height: 23px;
-  background-color: #FF0070;
-  position: relative;
-} */
-
-.footer decorated-zone {
-  min-inline-size: 360;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
+  min-height: 668px;
+  margin-top: 45px;
+  position: relative;
+  padding: 0 10px 10px;
 }
 
 .footer__title {
-  margin-block-start: 10%;
-  padding: 2.5%;
-  text-align: center;
-  font-weight: 700;
-  color: #DB00FF;
-  width: 100%;
-  min-width: 100px;
-  font-size: 116px;
-  line-height: 95.7px;
-  margin: auto;
-  font-size: (7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  filter: drop-shadow(5px 5px var(--brand-color));
+  font-size: var(--title-font-size);
+  text-transform: lowercase;
+  color: var(--title-color);
+  line-height: 0.825em;
+  text-shadow: 4px 4px var(--accent-color);
+  align-self: center;;
 }
-
-
-/*.cover__title {
-  width: 100%;
-  min-width: 100px;
-  font-weight: 700;
-  font-size: 116px;
-  line-height: 95.7px;
-  color: #DB00FF;
-  margin: auto;
-  filter: drop-shadow(5px 5px var(--brand-color));
-  margin-bottom: 40px;
-  font-size: (7.25rem, 7.0115rem + 1.0178vw, 7.5rem);*/
