--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,8 +3,19 @@
   и их переопределение под различные устройства
 */
 :root {
-  --accent-color: #ff0070;
-  --text-color: #F1B2CE;
   --bg-color: #000028;
-  --main-font:'IBM Plex mono';
+  --accent-color: #ff0070;
+  --main-color: #ff0070;
+  --text-color: #F1B2CE;
+  --transparent-main-color: #ff007055;
+  --bg-image: url(../images/cover-image-dark.png);
+  --title-color: #db00ff;
+  --block-title-color: #000028;
+  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+}
+
+@media (width >= 768px) {
+  :root {
+    --title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
