--- a/styles/style.css
+++ b/styles/style.css
@@ -59,12 +59,13 @@
   height: 25px;
 }
 
-.decorated-zone::before{
+.decorated-zone::before {
   border-top: solid 1px var(--main-color);
   border-right: solid 1px var(--main-color);
   top: 10px;
   right: 10px;
 }
+
 .decorated-zone::after {
   border-left: solid 1px var(--main-color);
   border-bottom: solid 1px var(--main-color);
@@ -131,7 +132,15 @@
 .content-section {
   display: grid;
   gap: 20px;
-  padding: 40px 10px 10px;
+  padding: 30px 10px 10px;
+}
+
+.card-two, .card-three {
+  margin-block-start: 10px;
+}
+
+.card-three {
+  margin-block-end: 10px;
 }
 
 .intro__title {
@@ -146,11 +155,30 @@
   flex-direction: column;
   gap: 10px;
 }
+
+.card-four {
+  padding-block-start: 30px;
+  padding-block-end: 40px;
+  gap: 0;
+}
+
+.card-four .content-section__introduction {
+  margin-bottom: 10px;
+}
+
 .content-section__introduction {
   font-size: 18px;
   line-height: 1.3em;
   background-color: var(--accent-color);
   color: var(--block-title-color);
+}
+
+.content-section__block {
+  background-color: var(--accent-color);
+  color: var(--block-title-color);
+  font-size: 18px;
+  line-height: 1.3em;
+  margin-block-end: 10px;
 }
 
 .card__text {
@@ -159,18 +187,17 @@
   line-height: 1.3em;
 }
 
-.card-one .intro__title {
-  margin-block-end: 10px;
+.main-text {
+  margin-block-start: 10px;
 }
 
-.color-span {
-  color: var(--subsection-text-color);
+.card__title {
+  color: var(--block-title-color);
   background-color: var(--accent-color);
-  font-size: var(--main-font-size);
-  font-weight: 400;
-  margin-top: 20px;
+  font-size: 18px;
+  line-height: 1.3em;
+  font-weight: normal;
 }
-
 .link {
   text-decoration: none;
   text-shadow: 2px 2px 0 var(--accent-color);
@@ -188,11 +215,15 @@
   outline: 1px solid var(--text-color);
 }
 
-.card__picture img{
+.card__picture {
+  display: grid;
+  gap: 10px;
+}
+
+.card__picture_img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
-  margin-top: 10px;
+  object-position: center;
 }
 
 .footer {
@@ -201,7 +232,6 @@
   align-items: center;
   height: 100vh;
   min-height: 668px;
-  margin-top: 45px;
   position: relative;
   padding: 0 10px 10px;
 }
@@ -213,4 +243,130 @@
   line-height: 0.825em;
   text-shadow: 4px 4px var(--accent-color);
   align-self: center;;
+}
+
+/*медиазапросы*/
+
+@media (width >= 768px) {
+
+.header {
+  padding: 20px;
+  margin-bottom: 60px;
+  
+  }
+  .cover__title {
+    margin-left: -20px;
+    }
+
+  .title-decor {
+    max-width: 364px;
+  }
+
+  .main-text {
+    padding: 0 20px;
+    gap: 75px;
+  }
+
+  .intro__title {
+    max-width: 236px;
+  }
+
+  .card-one,
+  .card-three {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .card__picture {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 192px 230px 318px;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  .card__picture img:nth-of-type(1) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .card__picture img:nth-of-type(2) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .card__picture img:nth-of-type(3) {
+    grid-column: 1/2;
+    grid-row: 2/4;
+  }
+
+  .card__picture img:nth-of-type(4) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .card__picture img:nth-of-type(5) {
+    grid-column: 2/4;
+    grid-row: 3/4;
+  }
+
+  .footer {
+    padding: 0 20px 20px;
+    margin-top: 65px;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header__decor-item {
+    top: 20px;
+    right: 30px;
+  }
+
+  .footer-title {
+    font-size: var(--font-size-desktop);
+    margin-top: 20px;
+  }
+}
+
+@media (width >= 1024px) {
+  
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header__text {
+    max-width: 491px;
+  }
+
+  .title,
+  .footer-title {
+    --title-text-shadow: #ff0070;
+  }
+
+  .card__two {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .article__title {
+    max-width: 315px;
+  }
+
+  .card__picture {
+    grid-template-rows: 260px 315px 428px;
+  }
+
+  .footer {
+    margin-top: 70px;
+  }
 }
