--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
   display: grid;
   grid-template-rows: 1fr auto 1fr;
   min-height: 668px;
+  height: 100vh;
   align-items: center;
   position: relative;
   padding: 10px;
@@ -44,8 +45,6 @@
   background-color: var(--accent-color);
   align-self: center;
   justify-content: end;
-/*  margin-inline-start: 10px;
-  margin-inline-end: 5px;*/
   border-radius: 50%;
   box-shadow: 0 0 4px 3px var(--accent-color);
 }
@@ -150,6 +149,12 @@
   line-height: 1.3em;
 }
 
+/*.article {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}*/
+
 .title_two {
   display: flex;
   flex-direction: column;
@@ -163,7 +168,7 @@
 }
 
 .card-four .content-section__introduction {
-  margin-bottom: 10px;
+  margin-block-end: 10px;
 }
 
 .content-section__introduction {
@@ -171,6 +176,9 @@
   line-height: 1.3em;
   background-color: var(--accent-color);
   color: var(--block-title-color);
+  margin-block-start: 10px;
+  margin-block-end: 10px;
+
 }
 
 .content-section__block {
@@ -222,6 +230,7 @@
 
 .card__picture_img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -245,15 +254,15 @@
   align-self: center;;
 }
 
-/*медиазапросы*/
+
 
 @media (width >= 768px) {
 
 .header {
-  padding: 20px;
-  margin-bottom: 60px;
-  
+    padding: 20px;
+    margin-bottom: 60px;
   }
+  
   .cover__title {
     margin-left: -20px;
     }
@@ -277,33 +286,33 @@
   }
 
   .card__picture {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 192px 230px 318px;
+    grid-column: span 3;
+    grid-row: 1;
     gap: 20px;
     margin-top: 20px;
   }
 
-  .card__picture img:nth-of-type(1) {
+  .card__picture_img:nth-of-type(1) {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
 
-  .card__picture img:nth-of-type(2) {
+  .card__picture_img:nth-of-type(2) {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
 
-  .card__picture img:nth-of-type(3) {
+  .card__picture_img:nth-of-type(3) {
     grid-column: 1/2;
     grid-row: 2/4;
   }
 
-  .card__picture img:nth-of-type(4) {
+  .card__picture_img:nth-of-type(4) {
     grid-column: 2/3;
     grid-row: 2/3;
   }
 
-  .card__picture img:nth-of-type(5) {
+  .card__picture_img:nth-of-type(5) {
     grid-column: 2/4;
     grid-row: 3/4;
   }
@@ -345,11 +354,11 @@
     flex-direction: row;
   }
 
-  .header__text {
+  .title-decor {
     max-width: 491px;
   }
 
-  .title,
+  .cover__title,
   .footer-title {
     --title-text-shadow: #ff0070;
   }
@@ -358,7 +367,7 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .article__title {
+  .intro__title {
     max-width: 315px;
   }
 
