--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,8 @@ body {
   margin: 0 auto;
   font-family: IBM Plex Mono, sans-serif;
   font-weight: 400;
+  display: grid;
+  gap: 40px;
 }
 
 h1,
