mid view works fine (except for images)

--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,7 @@
   gap: 0;
 }
 
+/* потому что отдельная сетка для картинок в 4ой секции */
 .card-four .content-section__introduction {
   margin-block-end: 10px;
 }
@@ -246,9 +247,9 @@
 
 @media (width >= 768px) {
 
-.header {
+  .header {
     padding: 20px;
-    margin-bottom: 60px;
+    height: 1024px;
   }
   
   .cover__title {
@@ -261,7 +262,7 @@
 
   .main-text {
     padding: 0 20px;
-    gap: 75px;
+    gap: 80px;
   }
 
   .intro__title {
