--- a/styles/style.css
+++ b/styles/style.css
@@ -89,7 +89,7 @@
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid (--main-color);
+  border: 1px solid var(--main-color);
   pointer-events: none;
 }
 
