--- a/styles/style.css
+++ b/styles/style.css
@@ -118,12 +118,6 @@
   justify-self: end;
 }
 
-.title-decor {
-  background-color: var(--accent-color);
-  color: var(--block-title-color);
-  font-weight: bold;
-}
-
 .cover {
   display: block;
   position: relative;
@@ -143,9 +137,15 @@
   gap: 20px;
 }
 
-.intro__title {
-  color: var(--main-color);
+.title {
+  background-color: var(--accent-color);
+  color: var(--block-title-color);
   font-weight: bold;
+}
+
+.section_title {
+  color: var(--main-color);
+  background-color: unset;
 }
 
 .article {
@@ -154,29 +154,23 @@
   gap: 20px;
 }
 
-.title_advice {
+.article_advice {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
 /* потому что отдельная сетка для картинок в 4ой секции */
-.card-pictures .content-section__introduction {
+.card-pictures .title {
   margin-block-end: 10px;
-}
-
-.content-section__introduction {
-  background-color: var(--accent-color);
-  color: var(--block-title-color);
 }
 
 .card__text {
   color: var(--text-color);
 }
 
-.card__title {
-  color: var(--block-title-color);
-  background-color: var(--accent-color);
+.text_normal {
+  font-weight: normal;
 }
 
 .link {
@@ -249,7 +243,7 @@
     gap: 80px;
   }
 
-  .intro__title {
+  .section_title {
     max-width: 236px;
   }
 
@@ -259,7 +253,7 @@
   }
 
   /* потому что отдельная сетка для картинок в 4ой секции */
-  .card-pictures .content-section__introduction {
+  .card-pictures .title {
     margin-block-end: 20px;
   }
 
@@ -364,7 +358,7 @@
     grid-row: 2/3;
   }
   
-  .intro__title {
+  .section_title {
     max-width: 315px;
   }
 
