--- a/styles/light.css
+++ b/styles/light.css
@@ -26,7 +26,8 @@
 }
 
 @media (width >= 1024px) {
-  .page.theme_light .title {
+  .page.theme_light .cover__title,
+  .page.theme_light .footer__title {
     text-shadow: 4px 4px 0px #ff0070;
   }
 }
@@ -46,5 +47,12 @@
 
   .header__decor-item {
     display: none;
+  }
+
+  @media (width >= 1024px) {
+    .cover__title,
+    .footer__title {
+      text-shadow: 4px 4px 0px #ff0070;
+    }
   }
 }
