--- a/styles/style.css
+++ b/styles/style.css
@@ -93,8 +93,8 @@
   width: 70px;
   border: none;
   cursor: pointer;
-  margin: auto;
-  line-height: 1.125rem;
+  line-height: 0px;
+  padding-bottom: 3px;
 }
 
 .header__theme-menu-button:hover {
