--- a/styles/style.css
+++ b/styles/style.css
@@ -159,9 +159,8 @@
   background-color: unset;
 }
 
-.article {
-  display: flex;
-  flex-direction: column;
+.article_group {
+  display: grid;
   gap: 20px;
 }
 
@@ -344,24 +343,8 @@
     --title-text-shadow: #ff0070;
   }
 
-  .card-what {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto auto;
-  }
-
-  .card-what .paragraph_multitasking {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-
-  .card-what .paragraph_food {
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-
-  .card-what .paragraph_gadgets {
-    grid-column: 3/4;
-    grid-row: 2/3;
+  .card-what .article_group {
+    grid-template-columns: 1fr 1fr 1fr;
   }
   
   .section_title {
